# OperationTerminal

./: CMakeLists.txt  README.md  main.cpp
include/: Operation.h  OperationFactory.h  Terminal.h
src/: Terminal.cpp
